--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
             </div>
             <div id="nav">
             </div>
-            <div id="carrito">
-                <span class="glyphicon glyphicon-shopping-cart"></span>
+            <div id="icono">
+                <span class="glyphicon glyphicon-user"></span>
+            </div>
+            <div id="user">
             </div>
         </div>
     </header>
@@ -48,6 +50,7 @@
         </div>
     </footer>
     <script src="js/DOM.js"></script>
+    <script src="js/Formularios.js"></script>
 </body>
 
 
