--- a/emergente.html
+++ b/emergente.html
@@ -22,7 +22,7 @@
 
 <body>
     <main>
-        <div id="prod2">
+        <div id="prod">
         </div>
     </main>
 </body>
@@ -49,8 +49,8 @@
                 array.push(valores[index]);
             }
             
-            document.getElementById("prod2").innerHTML="";
-            document.getElementById("prod2").innerHTML+="<div><a><h3>"+array[0]+"</h3><img src='"+array[2]+"'><span>"+array[0]+"</span><h4>"+array[1]+" €</h4></a></div><div id='desc'><h2>Descripción del producto: </h2><p>"+array[3]+"</p><h3>(Stock global: "+array[4]+")</h3></div>";
+            document.getElementById("prod").innerHTML="";
+            document.getElementById("prod").innerHTML+="<div><a><h3>"+array[0]+"</h3><img src='"+array[2]+"'><span>"+array[0]+"</span><h4>"+array[1]+" €</h4></a></div><div id='desc'><h2>Descripción del producto: </h2><p>"+array[3]+"</p><h3>(Stock global: "+array[4]+")</h3></div>";
     }
 
 </script>
