--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <span class="glyphicon glyphicon-user"></span>
             </div>
             <div id="user">
+                <form id="form1">
+                </form>
             </div>
         </div>
     </header>
