--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
         <div id="prod">
         </div>
     </main>
+    <div id="modulos">
+        <div id="modulocat">
+            <h2>Editar categorías</h2>
+        </div>
+        <div id="modulonav">
+            <h2>Editar tiendas</h2>
+        </div>
+        <div id="moduloprod">
+            <h2>Editar productos</h2>
+        </div>
+        <div id="modulostock">
+            <h2>Editar stock</h2>
+        </div>
+    </div>
     <footer>
         <div id="footer">
             <h3>Daniel Álvaro Calvillo</h3>
